--- a/pom.xml
+++ b/pom.xml
@@ -24,4 +24,16 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+<build>
+  <plugins>
+  <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+  <version>2.12.4</version>
+  <configuration>
+  <skipTests>true</skipTests>
+  </configuration>
+  </plugin>
+  </plugins>
+  </build>
 </project>
